# tensor

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Doxyfile  README.md  c_example.c  c_features.md  cross_product_demo.cc  features.md  gpu_test.cc  library_usage_demo.cc  mnist_demo.cc  mnist_demo_c.c  nn_layers_demo.cc  numpy_interop_demo.py  tensor_io_demo.cc
benchs/: ARCHITECTURE_SUMMARY.md  NORMALIZE_L1_OPTIMIZATION.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PROCEDURE.md  SESSION_SUMMARY.md  compare_benchmarks.py  run_benchmark.sh  tensor_normalize_benchmark.cc
benchs/results/: benchmark_20251112_113136.json  benchmark_20251112_113136.txt  benchmark_20251112_113224.json  benchmark_20251112_113224.txt  latest.json  latest.txt
docs/: instantiations.dox  mainpage.dox
docs/html/: README_8md.html  annotated.html  annotated_dup.js  classAdam-members.html  classAdam.html  classAdam.js  classAdam__coll__graph.map  classAdam__coll__graph.md5  classAdam__inherit__graph.map  classAdam__inherit__graph.md5  classAdam_a7ec21f5b92c9fa46f412ede24b5fbdad_cgraph.map  classAdam_a7ec21f5b92c9fa46f412ede24b5fbdad_cgraph.md5  classAdam_a8701d58bebcc13b756bb9179ef929683_icgraph.map  classAdam_a8701d58bebcc13b756bb9179ef929683_icgraph.md5  classAdam_aad25152da9830369c7d945a7698619cb_icgraph.map  classAdam_aad25152da9830369c7d945a7698619cb_icgraph.md5  classExponentialLR-members.html  classExponentialLR.html  classExponentialLR.js  classExponentialLR__coll__graph.map  classExponentialLR__coll__graph.md5  classLazyOperation-members.html  classLazyOperation.html  classLazyOperation.js  classLazyOperation_a6624287df5abcc1e864ba95b0765c654_icgraph.map  classLazyOperation_a6624287df5abcc1e864ba95b0765c654_icgraph.md5  classLazyOperation_aa61217a3399e130e1e18019b442cf52b_cgraph.map  classLazyOperation_aa61217a3399e130e1e18019b442cf52b_cgraph.md5  classMemoryPool-members.html  classMemoryPool.html  classMemoryPool.js  classMemoryPool__coll__graph.map  classMemoryPool__coll__graph.md5  classMemoryPool_a842e63c49f94b807e42b8ed5897bd1bb_cgraph.map  classMemoryPool_a842e63c49f94b807e42b8ed5897bd1bb_cgraph.md5  classMemoryPool_a980db306a49ce0f4b149198a99b6d24e_cgraph.map  classMemoryPool_a980db306a49ce0f4b149198a99b6d24e_cgraph.md5  classOptimizer-members.html  classOptimizer.html  classOptimizer.js  (+885 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  (+124 more)
examples/: backend_demo.cc  broadcasting_test.cc  cross_product_demo.cc  example01.cc  gpu_blas_demo.cc  gpu_test.cc  mnist_demo.cc  mnist_demo_c.c  mnist_demo_c_simple.c  nn_layers_demo.cc  simple_demo.cc  tensor_io_demo.cc
guide/: 01_system_role.md  02_implementation_strategy.md  03_vectorization.md  04_scalability.md  05_production.md  README.md
include/: linalg.h  linalg_advanced.h  loss_functions.h  nn_layers.h  optimizers.h  tensor.h  tensor_backend.h  tensor_base.h  tensor_blas.h  tensor_c.h  tensor_defs.h  tensor_error.h  tensor_friends.h  tensor_gpu.cuh  tensor_gpu.h  tensor_io.h  tensor_matrix.h  tensor_normalize.h  tensor_ops.h  tensor_perf.h  tensor_types.h
notes/: AUTO_GPU_SUMMARY.md  BENCHMARK_PYTORCH.md  BENCHMARK_README.md  BENCHMARK_UPDATES.md  C_API_MNIST_SUMMARY.md  C_INTERFACE_COMPLETE.md  C_INTERFACE_EXTENSIONS.md  C_INTERFACE_SUMMARY.md  DOCUMENTATION.md  DOCUMENTATION_OVERVIEW.md  DOCUMENTATION_QUICKREF.md  DOCUMENTATION_REVIEW.md  DOCUMENTATION_SUMMARY.txt  FINAL_SUMMARY.md  GPU_BLAS_IMPLEMENTATION_SUMMARY.md  GPU_BLAS_SUPPORT.md  GUIDE_COMPLETION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LINALG_GUIDE.md  LINALG_IMPLEMENTATION_SUMMARY.md  LINALG_QUICK_REFERENCE.md  MNIST_README.md  MNIST_SUMMARY.md  NUMPY_INTEGRATION_COMPLETE.md  NUMPY_INTEROP.md  PYTHON_BINDINGS_SUMMARY.md  PYTHON_UPDATE_SUMMARY.md  README.md  README_DOCS.md  REFACTORING_SUMMARY.md  USERGUIDE_SUMMARY.md  c_interop.md  features.md  transformers_systems_guide.md
perf/: tensor_perf.cc
python/: CHANGELOG.md  CMakeLists.txt  README.md  __init__.py  benchmark_numpy.py  build.sh  example_advanced_interop.py  example_autograd.py  example_linalg.py  example_training.py  setup.py  setup_simple.py  tensor_wrapper.cc  test_bindings.py  test_nn_layers.py  test_numpy_interop.py
python/bench/: benchmark_fill.py  benchmark_numpy.py  benchmark_pytorch.py
python/examples/: example_basic.py  example_linalg.py  example_numpy_interop.py  example_realworld.py
python/tests/: test_all_numpy.sh  test_nn_helpers.py  test_optimizer.py
src/: backend.cc  defs_utils.cc  tensor_c.cpp  tensor_error.cc  tensor_gpu.cu  tensor_instantiations.cc
tests/: gpu_sync_test.cc  linalg_test.cc  matrix_test.cc  nn_layers_test.cc  tensor_advanced_math_test.cc  tensor_arithmetic_test.cc  tensor_autograd_test.cc  tensor_basic_test.cc  tensor_broadcasting_test.cc  tensor_c_test.c  tensor_comparison_test.cc  tensor_dotproduct_test.cc  tensor_gpu_test.cc  tensor_indexing_test.cc  tensor_integration_test.cc  tensor_io_test.cc  tensor_linalg_advanced_test.cc  tensor_loss_test.cc  tensor_math_test.cc  tensor_nn_enhancements_test.cc  tensor_normalization_test.cc  tensor_ops_test.cc  tensor_optimizer_test.cc  tensor_perf_comprehensive_test.cc  tensor_perf_test.cc  tensor_random_sampling_test.cc  tensor_random_test.cc  tensor_reduction_test.cc  tensor_shape_test.cc  tensor_sorting_test.cc  tensor_stacking_extensions_test.cc  tensor_stats_test.cc  tensor_test.cc  tensor_transparent_ptr_test.cc
userguide/: 00-index.md  01-getting-started.md  02-core-tensor-operations.md  03-shape-manipulation.md  04-mathematical-operations.md  05-linear-algebra.md  06-autograd.md  07-machine-learning.md  08-advanced-indexing.md  09-io-operations.md  10-performance-optimization.md  11-normalization-views.md  12-random-sampling.md  13-sorting-searching.md  14-stacking-concatenation.md  15-best-practices.md  16-api-reference.md  17-python-integration.md  18-c-interface.md  README.md  c_interface.md
